tests/NormalTests/paczka1/fuzzy1/36006974.err
Error in line 4: QkKoCX1B9 A997 99,9
Error in line 5: QkKoCX1B9 A300 51,4
Error in line 6: 9g3Z S615 45,7
Error in line 12: 9g3Z A300 171,83
Error in line 11: 8BXDmj4 A88 53,7
Error in line 26: ovpgUyGyrkd A997 90,0
Error in line 28: ovpgUyGyrkd A88 41,3
Error in line 31: 8BXDmj4 A88 89,8
Error in line 36: 8BXDmj4 A997 90,1
